docker/scene_semantic_segmentation_preprocessing/pointnet/part_seg/log.txt
  File "C:\Users\ordic\pointnet2\part_seg\train.py", line 106
    print "--- Get model and loss"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
